feat: criado novo dominio de usuarios e rota para criar usuarios
