# internal/iam/domain/user/controller/controller.go
@@ -1,0 +1,13 @@
+package controller
+
+import "github.com/gin-gonic/gin"
+
+type Controller interface {
+	RegisterRoutes(routerGroup *gin.RouterGroup)
+	Create(c *gin.Context)
+}
+
+func (ctrl *impl) RegisterRoutes(routerGroup *gin.RouterGroup) {
+	group := routerGroup.Group("/user")
+	group.POST("/:identifier", ctrl.Create)
+}
